# AIWorkshop202508

./: AIエージェント作成8.pptx  Readme.md  compose.yml  mcp_config.json  pyproject.toml  superviser.py  yfinance_server.py
